# textrank

./: CMakeLists.txt  README.md  run.sh  segment.cpp
data/: news.2  news.seg  news.sent  news.u8  news.word  pos.list
src/: main.cpp  sentence_rank.cpp  sentence_rank.h  text_rank.cpp  text_rank.h  text_utils.cpp  text_utils.h
